Patch 1 for the code of example

--- a/Page_mark_test/About_me.html
+++ b/Page_mark_test/About_me.html
@@ -35,6 +35,9 @@
            <p>Atte: TechEdu_Team </p>
         </article>
     </section>
+    <img src="C:\Users\Edgar\Documents\Program\imgs\undraw_Programming_re_kg9v.png" alt="an immage of a guy while programmin">
 </main>
-<footer>© 2024 Todos los derechos reservados</footer>
+<footer>
+    <p class="footer_text">© 2024 Todos los derechos reservados</p>
+</footer>
 </html>
