--- a/Page_mark_test/index.html
+++ b/Page_mark_test/index.html
@@ -30,9 +30,48 @@
         <!--Esta clase esta destinada a mostrar datos de inicio-->
         <h1>Inicio</h1>
         <article>
-           <p>Texto de prueba</p>
+           <p>Esta es una pagina de prueba creada para la materia de estructura de datos</p>
+           <p>Pertenece a los creadores de TechEdu, que estudian en la Universidad America del Norte</p>
+        </article>
+        <h1>TechEdu Solutions - Technology Educational Solutions</h1>
+        <article>
+            <p>Con respecto a la marca y logo de la empresa, en un inicio, el nombre se baso en los siguientes puntos:</p>
+            <ul >
+                <li class="body_list">Tecnologia</li>
+                <li class="body_list">Educación</li>
+                <li class="body_list">Soluciones</li>
+            </ul>
+            <p>En base a lo mismos puntos, fue que se creo la misión, visión, y el objetivo de crear la empresa bajo ese nombre.</p>
+        </article>
+        <h1>Misión</h1>
+        <article>
+            <p>La misión de TechEdu, se basa en desarrollar soluciones tecnológicas que favorezcan la educación, 
+                así mismo, que sea de libre acceso, redituable, y que no solo sea de fines educativos 
+                (not only educational purpose), es decir, poder dar soluciones a todas las áreas que nos sean posibles
+                en base a nuestros conocimientos adquiridos por parte de la ingeniería y, también, por parte de capacitaciones 
+                externas.
+            </p>
+        </article>
+        <h1>Visión</h1>
+        <article>
+            <p>La visión que se planteo en un inicio, fue la posibilidad de dar apoyo a las siguientes áreas:</p>
+            <li class="body_list">Educación</li>
+            <li class="body_list">Tecnología</li>
+            <li class="body_list">Ciencia</li>
+            <li class="body_list">Empresas: Privadas, Públicas, ONG'S, etc.</li>
+            <li class="body_list">Y todo aquel que necesitara el apoyo</li>             
+        </article>
+        <h1>Objetivo</h1>
+        <article>
+            <p>El objetivo planteado para TechEdu fue el siguiente: Ayudar a todo aquel que lo requiera, 
+                ya sea una persona, una PyME o una Empresa corporativa cualquiera, sea magnate o no. 
+                Y crear herramientas que les permitan a los jóvenes estudiantes hacer procesos de manera 
+                más rápida y eficiente.
+            </p>
         </article>
     </section>
-</main>
-<footer>© 2024 Todos los derechos reservados</footer>
+    </main>
+<footer>
+    <p class="footer_text">© 2024 Todos los derechos reservados</p>
+</footer>
 </html>
