--- a/Page_mark_test/Contact_me.html
+++ b/Page_mark_test/Contact_me.html
@@ -31,7 +31,7 @@
         <h2>Nosotros</h2>
         <article> 
             <p>¿Te gustaria contactarnos? Perfecto!!!</p>
-            <p>Nuestro correo: technologyedu.solutions@gmail.com  </p>
+            <p>Nuestro correo: technologyedu.solutions@gmail.com  </p> <!--Correo de ejemplo-->
             <p>Nuestro instagram:  <a href="https://www.instagram.com/techedu_solution/">@techedu_solution</a> </p>
             <p>Nuestro tiktok: <a href="https://www.tiktok.com/@techedu3?_t=8nAdjbE0o57&_r=1">@techedu3</a> </p>
         </article>
@@ -43,14 +43,14 @@
                 nosotros nos pondremos en contacto contigo!!! </p>
            <p>Tranquilo, tu información está segura con nosotros.</p>
            <div class="Recov_data">
-                <p>Introduce los siguentes datos</p>
+                <p> <b>Introduce los siguentes datos</b> </p>
                 <p> <b>Nombre completo:</b> </p>
                 <input class="Name_recov" type="text">
                 <p> <b>Correo Electronico:</b> </p>
                 <input class="Email_recov" type="email">
                 <p> <b>Deja tu comentario o duda:</b> </p>
                 <input class="Text_recov" type="text">
-                <input id="send_btn" type="button" value="Send" >n
+                <input id="send_btn" type="button" value="Send" >
                 <script> //Esta clase se usara para obtener los elementos de contacto de los clientes
                     document.getElementById('send_btn').addEventListener('click', function name(params) {
                         this.innerText = 'información Confirmada'})
@@ -59,5 +59,7 @@
         </article>
     </section>
 </main>
-<footer>© 2024 Todos los derechos reservados</footer>
+<footer>
+    <p class="footer_text">© 2024 Todos los derechos reservados</p>
+</footer>
 </html>
